# dbt-mysql-adapter

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CONTRIBUTING.rst  README.md  RELEASE.md  poetry.toml  pyproject.toml  setup.py
dbt/adapters/mysql/: connections.py
dbt/include/mysql/macros/: adapters.sql
dbt/include/mysql/macros/materializations/incremental/: incremental.sql  merge.sql
dbt/include/mysql/macros/materializations/table/: table.sql
test/: mysql.dbtspec
