[tool]

[tool.poetry]
name = "dbt-mysql-adapter"
version = "0.19.0"
authors = ["Juliano Benvenuto Piovezan <piovezan.juliano@gmail.com>"]
description = "The MySQL adapter plugin for dbt (data build tool)"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/julianopiovezan/dbt-mysql-adapter"
keywords = [
    "dbt-mysql",
    "adapter",
    "dbt",
    "mysql"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
packages = [
    { include = "dbt" },
]


[tool.poetry.dependencies]
python = ">=3.6.3"
dbt-core = "==0.19.0"
mysql-connector-python = "==8.0.*,>=8.0.22"
wrapt = "==1.13.3"

[tool.poetry.dev-dependencies]
black = "==21.7b0"
bleach = ">=3.3.0"
bump2version = "*"
flake8 = "==4.0.1"
pytest = "==6.*,>=6.0.0"
pytest-dbt-adapter = "==0.4.*,>=0.4.0"
rope = "==0.22.0"
tox = "==3.*,>=3.2.0"
twine = "*"
wemake-python-styleguide = "==0.0.1"

[build-system]
requires = ["setuptools_pep660"]
build-backend = "setuptools.build_meta"